2010-07-29  Noel O'Boyle

	* include/openbabel/rotor.h: Fix memory leak in AddRotor

2010-07-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* test/sdfcansmitest.cpp: Added new unit test suggested by TJ
	O'Donnell to check for canonical SMILES consistency from a
	SDFile. Currently shows 4 / 48 failures.

2010-07-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* tools/CMakeLists.txt: Only link getopt.c if needed. Removes
	warnings from Clang and GCC about strlen on non-glibc platforms
	(e.g. Mac).

	* scripts/openbabel-python.i: Add chargemodel to Python bindings.

	* src/mol.cpp (AddHydrogens): Fix crashes exposed by
	buildertest. Make sure to clear flags even if we don't
	actually add hydrogens.

	* test/buildertest.cpp: Add asserts to ensure perception flags are cleared.

2010-07-26  Noel O'Boyle

	* CMakeLists.txt, src/formats/CMakeLists.txt: Conditionally compile
	gamessukformat.cpp only if MSVC or has regex.h. (Fix for MinGW
	compilation)

2010-07-26  Noel O'Boyle

	* scripts/CMakeLists.txt, openbabel-python.i: Pass -DHAVE_EIGEN2 to swig
	and conditionally generate bindings for conformersearch.h.

2010-07-22 Chris Morley

	* src/formats/mdlformat.cpp: right align atom numbers in A line, as
	prompted by Igor Filippov.

	* include/openbabel/tokenst.h: add functor to help withr deleting
	containers of pointers.

2010-07-21  Noel O'Boyle

	* include/openbabel/math/align.h: Add Doxygen docs. Update the default
	constructor.
	* src/math/align.cpp: Update the default constructor.

2010-07-21  Noel O'Boyle

	* src/formats/povrayformat.cpp: POV-ray format has been neglected for
	a long time. Based on Steven Wathen's comments on openbabel-discuss
	(28/11/2009), I have gotten it to work. I also added options for
	checkerboard, a mirror sphere and sky.

2010-07-21  Noel O'Boyle

	* src/CMakeLists.txt: Only compile ops/conformer.cpp and
	src/conformersearch.cpp if Eigen2 is found

2010-07-19 Chris Morley
